2005-11-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/mpegstream/gstmpegparse.c (gst_mpeg_parse_class_init) 
	(gst_mpeg_parse_handle_discont, gst_mpeg_parse_send_newsegment) 
	(gst_mpeg_parse_chain): 
	* gst/mpegstream/gstmpegdemux.c (gst_mpeg_demux_class_init) 
	(gst_mpeg_demux_send_newsegment): 
	* gst/mpegstream/gstdvddemux.c (gst_dvd_demux_send_subbuffer): 
	* gst/mpegstream/gstmpegparse.h: 
	Rename send_discont method to send_newsegment and add parameters
	to handle actual segments. Adapt code all around to run with the
	new name and signature.
	* gst/mpegstream/gstmpegdemux.c: 
	* gst/mpegstream/gstmpegparse.c: 
	* gst/mpegstream/gstdvddemux.c:
	Convert to GST_BOILERPLATE.

2005-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: back to HEAD

=== release 0.9.6 ===

2005-11-23  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.9.6, "The Marshals Are Dead"

2005-11-23  Michael Smith <msmith@fluendo.com>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_sink_event),
	(gst_rmdemux_src_event), (gst_rmdemux_validate_offset),
	(find_seek_offset_bytes), (find_seek_offset_time),
	(gst_rmdemux_perform_seek), (gst_rmdemux_src_query),
	(gst_rmdemux_loop), (gst_rmdemux_fourcc_isplausible),
	(gst_rmdemux_chain), (gst_rmdemux_send_event),
	(gst_rmdemux_add_stream), (gst_rmdemux_parse_mdpr),
	(gst_rmdemux_parse_packet):
	  Fractional framerates.

2005-11-23  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/mpeg2dec/gstmpeg2dec.c: (src_templ),
	(gst_mpeg2dec_negotiate_format), (handle_sequence),
	(gst_mpeg2dec_sink_event):
	* ext/mpeg2dec/gstmpeg2dec.h:
	Use fractional framerates

2005-11-22  Wim Taymans  <wim@fluendo.com>

	* gst/mpegstream/gstmpegparse.c: (gst_mpeg_parse_set_clock):
	set_clock returns a boolean.

2005-11-22  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/mad/gstmad.c: (gst_mad_chain):
	  Fix seeking even more by sending the newsegment event with the